--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: My Blog # the main title
+title: Eliud's Blog # the main title
 
 tagline: This is a cybersecurity blog that breaks down challenges across various categories. Here you will find detailed writeups, solutions to challenges from multiple platforms, and general resources on cybersecurity # it will display as the subtitle
 
